fix webkit scrollbar size calculation

--- a/test/js/styl/test.styl
+++ b/test/js/styl/test.styl
@@ -12,8 +12,8 @@ body {
 }
 
 .scrollable--container::-webkit-scrollbar {
-	height: auto;
-	width: auto;
+	//height: auto;
+	//width: auto;
 	background: red;
 }
 
